security/01-check-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: net-pol-check
  labels:
    role: check
spec:
  containers:
    - name: bash
      image: nginx:1.20
