security/05-check-pod2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: net-pol-check-2
spec:
  containers:
    - name: bash
      image: nginx:1.20
