security/08-prod-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: net-pol-check-prod
  namespace: production
  labels:
    role: check
spec:
  containers:
    - name: bash
      image: nginx:1.27
