security/03-web-allow-ingress-by-lbl.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-ingress-by-lbl
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - {}
