security/crd-cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: untitled-policy
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            role: check
      toPorts:
        - ports:
            - port: "80"
